# matchmaker-rs

./: .gitignore  Cargo.toml  DEVELOPMENT.md  README.md  dev_setup.sh  rustfmt.toml
.github/workflows/: client-load-tester-docker.yml  matchmaker-rs-docker.yml
crates/load_tester_client/: Cargo.toml
crates/load_tester_client/src/: main.rs
crates/server/: Cargo.toml
crates/server/src/: game_server_service.rs  main.rs  matchmaker.rs  matchmaking_queue_service.rs  server.rs
crates/wire_protocol/: Cargo.toml
crates/wire_protocol/src/: lib.rs
deployment/docker/: load_tester_client.Dockerfile  matchmaker-rs.Dockerfile
deployment/docker-compose/: docker-compose.dev.yml  matchmaker_dash.json  otel-collector-config-connector.yml
deployment/environments/dev_local/: README.md  docker-compose.yml  otel-collector-config-connector.yml  prometheus.yml
deployment/environments/test/: README.md  docker-compose.yml  machine-metrics-only-otel-collector.yml  otel-collector-config-connector.yml
deployment/environments/test/pulumi/: Pulumi.test.yaml  Pulumi.yaml  index.ts  package-lock.json  package.json
server/: Cargo.toml
server/src/: game_server_service.rs  main.rs  matchmaker.rs  protocol.rs
wire_protocol/: Cargo.toml
wire_protocol/src/: lib.rs
