[workspace]
members = [
  "crates/*"
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5.0", features = ["derive"] }
color-eyre = "0.6.2"
opentelemetry = "0.21.0"
opentelemetry-otlp = "0.14.0"
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.2", features = [ "rt-tokio", "tokio" ] }
pprof = { version = "0.13.0", features = ["flamegraph"] }
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v4"] }

[profile.dev.package.backtrace]
opt-level = 3