[workspace]
members = [
  "crates/*"
]
resolver = "2"

[workspace.dependencies]
async-trait = "0.1.77"
clap = { version = "4.5.0", features = ["derive"] }
color-eyre = "0.6.2"
opentelemetry = { version = "0.21.0", features = [ "default", "metrics" ] }
opentelemetry-otlp = { version = "0.14.0", features = ["default", "metrics"] }
opentelemetry-semantic-conventions = "0.13.0"
opentelemetry_sdk = { version = "0.21.2", features = [ "rt-tokio", "metrics" ] }
pprof = { version = "0.13.0", features = ["flamegraph"] }
rand = "0.8.5"
rmp-serde = "1.1.2"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-chrome = "0.7.1"
tracing-flame = "0.2.0"
tracing-opentelemetry = "0.22.0"
tracing-subscriber = "0.3.18"
tracing-tracy = "0.11.0"
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v4"] }

[profile.dev.package.backtrace]
opt-level = 3