[package]
name = "matchmaker-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5.0", features = ["derive"] }
color-eyre = "0.6.2"
console-subscriber = "0.2.0"
redis = "0.24.0"
rmp-serde = "1.1.2"
serde = { version = "1.0.196", features = ["derive"] }
tokio = { version = "1.36.0", features = ["full", "tracing"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
uuid = { version = "1.7.0", features = ["fast-rng", "serde", "v4"] }

[profile.dev.package.backtrace]
opt-level = 3
