[package]
name = "matchmaker-rs"
version = "0.1.0"
edition = "2021"

[features]
default = []
tracing_flame = ["dep:tracing-flame"]
tracing_otel = ["dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:tracing-opentelemetry"]
tracing_perfetto = ["dep:tracing-chrome"]
tracing_tracy = ["dep:tracing-tracy"]
tracing_pprof = ["dep:pprof"]

[dependencies]
clap = { workspace = true }
color-eyre = { workspace = true }
console-subscriber = { version = "0.2.0", features = ["parking_lot"] }
opentelemetry = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true }
opentelemetry_sdk = { workspace = true, optional = true }
pprof = { workspace = true, optional = true }
redis = "0.24.0"
rmp-serde = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-chrome = { workspace = true, optional = true }
tracing-flame = { workspace = true, optional = true }
tracing-opentelemetry = { workspace = true, optional = true }
tracing-subscriber = { workspace = true }
tracing-tracy = { workspace = true, optional = true }
uuid = { workspace = true }
wire_protocol = { path = "../wire_protocol" }
